Optimized gradle build scripts location.