@@ -1,6 +1,9 @@
+import org.apache.tools.ant.filters.*
+
 plugins {
     id 'java'
     id 'idea'
+    id 'application'
 }
 
 repositories {
@@ -12,6 +15,7 @@ sourceSets {
         java {
             srcDir 'src/main/bugtraq'
         }
+        output.resourcesDir = "build/classes/java/main"
     }
     test {
         java {
@@ -30,9 +34,11 @@ ant.failOnError = true
 ant.importBuild('build.xml') { antTargetName ->
     'a-' + antTargetName
 }
+clean.dependsOn("a-clean")
 
 group = "com.gitblit"
-version = "0.10.0-JDisc"
+version = "0.10.0"
+ext['gb.version'] = "${version} with modern SSH algorithms"
 
 java {
     toolchain {
@@ -40,8 +46,38 @@ java {
     }
 }
 
+tasks.register("processResourcesFromJavaSources", Copy) {
+    sourceSets.main.java.srcDirs.forEach { srcDir ->
+        from(srcDir) {
+            exclude '**/*.java'
+        }
+        into sourceSets.main.output.classesDirs.asPath
+        filter ReplaceTokens, tokens: [
+                'gb.version': project.property('gb.version')
+        ]
+    }
+}
+processResources.dependsOn processResourcesFromJavaSources
+
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.gitblit.GitBlitServer'
+        attributes 'Specification-Title': "GitBlit Server"
+        attributes 'Specification-Version': "${version}"
+        attributes 'Specification-Vendor': "Development"
+        attributes 'Implementation-Title': project.name
+        attributes 'Implementation-Version': project.version
+        attributes 'Implementation-Vendor': "Development"
+    }
+}
+
+application {
+    mainClass = 'com.gitblit.GitBlitServer'
+    applicationDefaultJvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
 }
 
 ext['selenium.version'] = '2.28.0'
